# monad-classes-logging

./: README.md  monad-classes-logging-effect.cabal  monad-classes-logging.cabal  stack.yaml
src/Control/Monad/Classes/: Log.hs
test/: Spec.hs
