name:                monad-classes-logging
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edwardgeorge/monad-classes-logging#readme
license:             BSD3
license-file:        LICENSE
author:              Edward George
maintainer:          edwardgeorge@gmail.com
copyright:           2017 Edward George
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag feuerbach
  description:         Use feuerbach version of monad-classes
  default:             False
  manual:              True

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Monad.Classes.Log
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim >= 0.5
                     , logging-effect >= 1.2
                     , transformers >= 0.5
  if flag(feuerbach)
     cpp-options:       -DUSE_FEUERBACH
     build-depends:    monad-classes >= 0.2
  else
     build-depends:    monad-classes >= 0.3
  default-language:    Haskell2010

test-suite monad-classes-logging-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monad-classes-logging
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/edwardgeorge/monad-classes-logging
